--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="root">
       <h1>Suora React Workshop</h1>
       <p>Die Entwicklungsumgebung läuft. Jetzt fehlt nur noch React :-)</p>
-      <p>Dafür muss die Datei <code>/src/index.ts</code> angepasst werden.</p>
+      <p>Dafür muss die Datei <code>/src/index.tsx</code> angepasst werden.</p>
 
       <!-- mit JS prüfen, ob die aktuelle seite auf localhost läuft. sonst warnung darstellen -->
       <script>
